--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>Vue.js TypeScript Skeleton</title>
-    <!-- <link rel="shortcut icon" href="imgs/favicon.ico" type="image/x-icon"> -->
 
-    <script src="bundle.js"></script>
+    <!-- Webpack will inject the bundle script tag -->
+
 </head>
 
 <body>
